keybinds, packets, and whatnot :)

--- a/common/src/main/resources/assets/satchels/lang/en_us.json
+++ b/common/src/main/resources/assets/satchels/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.satchels.satchel": "Satchel"
+  "item.satchels.satchel": "Satchel",
+  "key.satchels.toggle_satchel": "Toggle Satchel"
 }
